Minor changes to handbook_template.tex to improve layout. Some data have been modified to fit on to allocated pages.

--- a/comp140/data.tex
+++ b/comp140/data.tex
@@ -6,10 +6,10 @@
 \def\moduleLeader{Brian McDonald}
 \def\academicStaff{Alcywn Parker, Martin Cooke (Moderator)}
 
-\def\introduction{This module builds upon Creative Computing: Tinkering, allowing you to further develop confidence with object-orientated programming and the creative approach to computing in the games development context. You will take code in multiple contexts, and learn ways and methods for bringing these together in synthesis in order to build more interesting and complex systems. Part of this will involve ‘hacking’ together different sets of open-source code, hardware, and web services together; all the while considering issues such as intellectual property law and licensing.}
+\def\introduction{This module enables you to further develop confidence with object-orientated programming in C/C++ and the creative approach to computing in the games development context. You will take code in multiple contexts, and learn ways and methods for bringing these together in synthesis in order to build more interesting and complex systems. Part of this will involve `hacking' together different sets of open-source code, hardware, and web services together; all the while considering issues such as intellectual property law.}
 
 \def\moduleAims{
-	{Understand the role of the computing professional in the games industry},
+	{Understand professionalism in the games industry},
 	{Understand how to organise, repurpose, and augment code from multiple sources to build a unified solution},
 	{Understand how to generate innovation at a basic level}}
 	
