--- a/comp130/data.tex
+++ b/comp130/data.tex
@@ -6,12 +6,12 @@
 \def\moduleLeader{Dr Michael Scott}
 \def\academicStaff{Dr Edward Powley (Moderator), Brian McDonald (Moderator)}
 
-\def\introduction{This module helps you extend your practical experience and knowledge of game development practices. You will engage in depth with the principles of professional software engineering in the context of a collaborative multi-disciplinary project. All the while, researching the importance of software quality, in terms of its maintainability and sophistication, and applying your findings to shape, measure, and improve the computing solutions that you integrate into your game.}
+\def\introduction{This module helps you extend your practical experience and knowledge of game development practices. You will engage in depth with the principles of professional software engineering in the context of a collaborative multi-disciplinary project. All the while, researching the importance of software quality and applying your findings to shape, measure, and improve the computing solutions that you integrate into your game.}
 
 \def\moduleAims{
-	{Acquire knowledge and understanding of professional software engineering in the context of games.},
-	{Understand at a foundational level the design principles for a simple game architecture and apply professional software engineering to implement them.},
-	{Apply research findings to the development of functional components for a game architecture in a collaborative context.}}
+	{Acquire knowledge of professional software architecture and engineering in the context of games.},
+	{Apply research findings to the development of a game architecture in a collaborative context.},
+	{Implement software design principles and engineering practices at a foundational level.}}
 	
 \def\moduleLearningOutcomes{1,2,3,4,5,6}
 	
