--- a/handbook_template.tex
+++ b/handbook_template.tex
@@ -5,7 +5,15 @@
 \section{\moduleName}
 
 	% MODULE CODE
-	\addtabtoks{\textbf{Module Code} & \moduleCode\\}
+	\addtabtoks{\textbf{Module Code} & \moduleCode&\\}
+	
+	\addtabtoks{&&\\}
+	
+	\addtabtoks{\textbf{Module Credits} & \credits&\\}
+	
+	\addtabtoks{&&\\}
+	
+	\addtabtoks{\textbf{Status} & \isCompulsory&\\}
 	
 	\addtabtoks{&&\\}
 
@@ -57,7 +65,7 @@
 	% MAKE TABLE											
 	\begin{center}
 		\footnotesize
-		\def\arraystretch{1.3}
+		\def\arraystretch{1.1}
 		\begin{tabular} { | p{.23\textwidth} | p{.63\textwidth} p{.14\textwidth} |}
 			\printtabtoks
 		\end{tabular}
@@ -108,8 +116,8 @@
 	% MAKE TABLE											
 	\begin{center}
 		\footnotesize
-		\def\arraystretch{2}
-		\begin{tabular} { | P{.05\textwidth} | p{.45\textwidth} p{.45\textwidth} |}
+		\def\arraystretch{1.25}
+		\hspace*{-0.5cm}\begin{tabular} { | P{.03\textwidth} | p{.47\textwidth} p{.47\textwidth} |}
 			\printtabtoks
 		\end{tabular}
 	\resettabtoks
