Changes made to COMP220, module aims and intro

--- a/comp220/data.tex
+++ b/comp220/data.tex
@@ -6,7 +6,7 @@
 \def\moduleLeader{Brian McDonald}
 \def\academicStaff{Dr Edward Powley (Moderator)}
 
-\def\introduction{On this module you will develop your understanding of 3D graphics rendering and physics simulation used in modern computer games. Using the OpenGL library, you develop your coding skills in the context of graphics technologies and pipelines and gain an understanding of the operation of simulated virtual environments. You will also engage practically and creatively to draft physics processing and graphics rendering pipelines in order to change their behaviours and create distinctive visual styles suited to your individual or group game concept.}
+\def\introduction{On this module you will develop your understanding of 3D graphics rendering and physics simulation used in modern computer games. Using Modern Graphics APIs, you will develop your coding skills in the context of graphics technologies and pipelines. You will also engage practically and creatively to develop physics simulation and rendering pipelines in order to support your individual or group game concept.}
 
 \def\moduleAims{
 	{Gain an understanding and knowledge of graphics and simulation technology},
@@ -20,7 +20,6 @@
 	{Show a basic understanding of how to communicate effectively with stakeholders in writing, verbally, and through adherence to coding standards. Annotate software to communicate with others effectively.},
 	{Reflect critically on the behaviour change intended and its visual structure and explain the rationale for working method and graphics-based solution.},
 	{Understand and apply knowledge of rendering pipelines used to produce changes in graphics engine behaviour.},
-	{},
 	{Show understanding of how to plan and organise time to meet deadlines and fulfil a brief.}}
 
 \def\assignments{
