Edited COMP350 Intro and Aims

--- a/comp350/data.tex
+++ b/comp350/data.tex
@@ -6,12 +6,12 @@
 \def\moduleLeader{Brian McDonald}
 \def\academicStaff{Dr Edward Powley (Moderator)}
 
-\def\introduction{On this module you practise and develop your computing skills but focusing on methods for creating efficient and optimised code. You will learn methods of resource management required within the context of games. You will acquire greater knowledge of how savings can be made and how to trade-off various elements to create optimisation. You will grow in your understanding and experience of how to predict outcomes of various approaches and how to evaluate possible strategies requisite for professional practice. A port project will enable you to tackle in a live situation some of the problems of efficiency and optimisation that arise.}
+\def\introduction{On this module you will focusing on methods for creating efficient and optimised code. You will acquire greater knowledge of how savings can be made and how to trade-off various elements to create optimisation. You will grow in your understanding and experience of how to predict outcomes of various approaches and how to evaluate possible strategies requisite for professional practice. You will also investigate the optimisations that required when porting an application to mobile or console platforms.}
 
 \def\moduleAims{
-	{Gain in understanding of techniques used professionally in the management of computing resources.},
+	{Gain an understanding of techniques used professionally in the management of computing resources.},
 	{Acquire knowledge and experience of concepts used to predict and model resource use.},
-	{Acquire the knowledge and experience to enable critical evaluation of trade-offs to generate optimisation and efficiency.}}
+	{Acquire the knowledge and experience to critically evaluation the trade-offs between optimisations and efficiency.}}
 	
 \def\moduleLearningOutcomes{1,3,6}
 	
