Added in all modules to the module list, testing layout of edited modules

--- a/build.tex
+++ b/build.tex
@@ -138,7 +138,13 @@ DOI: \url{10.13140/2.1.3680.9281}
 \def\moduleList{
 	comp110, 
 	comp120, 
-	comp150}
+	comp150,
+	comp210,
+	comp220,
+	comp230,
+	comp310,
+	comp320,
+	comp330}
 	 
 \foreach \x in \moduleList {
 
@@ -152,7 +158,13 @@ DOI: \url{10.13140/2.1.3680.9281}
 	
 \def\moduleList{	   
 	comp140, 
-	comp130}
+	comp130,
+	comp250,
+	comp260,
+	comp240,
+	comp350,
+	comp360,
+	comp340}
 	
 \foreach \x in \moduleList {
 
