--- a/handbook_template.tex
+++ b/handbook_template.tex
@@ -92,7 +92,9 @@
 	\MakeLowercase{\protect\url{http://resourcelists.falmouth.ac.uk/modules/\moduleCode}}
 
 	\subsection{Learning Space}
-	\url{http://learningspace.falmouth.ac.uk/course/view.php?id=\learningSpaceID}
+	\MakeLowercase{\protect\url{http://learningspace.falmouth.ac.uk/course/view.php?id=\learningSpaceID}}
+	
+	\newpage
 		
 	% ASSESSMENT CRITERIA
 	\addtabtoks{\textbf{LO} & \textbf{Learning Outcomes} & \textbf{Assessment Criteria} \\}
@@ -112,12 +114,12 @@
 		}
 		\addtabtoks{\\}	
 	}
-		
+	
 	% MAKE TABLE											
 	\begin{center}
 		\footnotesize
 		\def\arraystretch{1.25}
-		\hspace*{-0.5cm}\begin{tabular} { | P{.03\textwidth} | p{.47\textwidth} p{.47\textwidth} |}
+		\hspace*{-0.1cm}\begin{tabular} { | P{.03\textwidth} | p{.47\textwidth} p{.47\textwidth} |}
 			\printtabtoks
 		\end{tabular}
 	\resettabtoks
