Modified module data to fit on pages cleanly.

--- a/comp130/data.tex
+++ b/comp130/data.tex
@@ -6,11 +6,11 @@
 \def\moduleLeader{Dr Michael Scott}
 \def\academicStaff{Dr Edward Powley (Moderator), Brian McDonald (Moderator)}
 
-\def\introduction{This module helps you extend your practical experience and knowledge of game development practices. You will engage in depth with the principles of professional software engineering in the context of a collaborative multi-disciplinary project. All the while, researching the importance of software quality and applying your findings to shape, measure, and improve the computing solutions that you integrate into your game.}
+\def\introduction{This module extends your game development practice by getting you to  engage with the principles of professional software engineering in the context of a collaborative multi-disciplinary project. All the while, researching the importance of software quality and applying your findings to shape, measure, and improve the computing solutions that you integrate into your game.}
 
 \def\moduleAims{
 	{Acquire knowledge of professional software architecture and engineering in the context of games.},
-	{Apply research findings to the development of a game architecture in a collaborative context.},
+	{Apply metrics and re-factoring practices to the evolution of a game architecture in a collaborative context.},
 	{Implement software design principles and engineering practices at a foundational level.}}
 	
 \def\moduleLearningOutcomes{1,2,3,4,5,6}
