--- a/comp150/data.tex
+++ b/comp150/data.tex
@@ -6,12 +6,12 @@
 \def\moduleLeader{Dr Michael Scott}
 \def\academicStaff{Dr Edward Powley (Moderator), Brian McDonald (Moderator)}
 
-\def\introduction{This module is designed to introduce you to the foundational principles and processes of professional game development. You will gain an understanding of the way that different components come together to make playable games and how those components are organised through the development pipeline. You will also gain a 'first principles' understanding of how games are designed with a target market in mind, how a strong underlying concept is developed, and how different aspects of creative computing contribute to the process.}
+\def\introduction{This module addresses the foundational principles and processes of computer game development. You will gain a practical understanding of how a playable game comes together according to the agile development philosophy and industry practice. You will also gain a `first principles' understanding of how games are designed with a target market in mind, as well as how creative computing contributes to the process.}
 
 \def\moduleAims{
-	{Understand the basic principles, terminology, roles, tools, and software used in the development of digital games},
-	{Apply foundational knowledge and skills in order to organise and execute a game development project},
-	{Understand how to manage a collective game development project and communicate effectively within the development group}}
+	{Recall the basic principles, terminology, roles, tools, and pipelines used in the development of digital games},
+	{Apply foundational management skills in order to organise and execute a game development project},
+	{Communicate and implement version control effectively within a software development team}}
 	
 \def\moduleLearningOutcomes{1,2,3,4,5,6}
 	
