--- a/comp230/data.tex
+++ b/comp230/data.tex
@@ -6,7 +6,7 @@
 \def\moduleLeader{Dr Michael Scott}
 \def\academicStaff{Alcywn Parker (Moderator)}
 
-\def\introduction{This module allows you to work on a game development project over its course. You will develop your knowledge of computing for games in a practical way, using techniques and methods that help you to take a creative approach to building a unique and innovative `indie'-style product . Further to this, you will reflect upon the professional and ethical implications of your working practice as well as the socio-cultural implications of the games that you design.}
+\def\introduction{This module forms the first part of a year-long game development project. You will consolidate your knowledge of computing for games in a practical way by applying techniques and methods to build a unique and innovative `indie'-style game. All the while, reflecting upon the professional and ethical implications of your working practice as well as the socio-cultural implications of the games that you design.}
 
 \def\moduleAims{
 	{Understand the design and implementation of innovative software products targeted at the games industry},
