--- a/comp310/data.tex
+++ b/comp310/data.tex
@@ -6,11 +6,11 @@
 \def\moduleLeader{Dr Edward Powley}
 \def\academicStaff{Brian McDonald (Moderator)}
 
-\def\introduction{On this module you will engage with interface technologies which are changing the way that we play games. You will undertake a series of practical and creative engagements with emergent technologies, such as augmented and virtual reality devices, working iteratively to produce an innovative solution. You may tie this work into either your individual or collaborative game development project.}
+\def\introduction{On this module you build on your experience and knowledge of programming by engaging with the underlying computer technology in greater depth through an exploration of legacy game systems. You will learn the importance of disciplined programming practice while using low-level languages to create a simple game prototype. You'll demonstrate this using an emulator for a legacy game platform.}
 
 \def\moduleAims{
-	{Acquire knowledge and understanding of professional software engineering in the context of legacy games},
-	{Understand the role of low-level computing principles and processor architectures in the execution of game software.},
+	{Acquire knowledge and understanding of professional software engineering in the context of legacy technology.},
+	{Understand low-level computing principles and processor architectures.},
 	{Apply low-level computing knowledge to the development of games and game-related software.}}
 	
 \def\moduleLearningOutcomes{1,2,3,4,6}
