--- a/comp320/data.tex
+++ b/comp320/data.tex
@@ -6,12 +6,12 @@
 \def\moduleLeader{Dr Edward Powley}
 \def\academicStaff{Dr Michael Scott (Moderator)}
 
-\def\introduction{You will work on a major research project over the course of the year. You either work on empirical research relating to computing for games, or engage in practice-based research related to game development. This is an individual project so you can explore a topic or develop a solution in an area that interests you personally, but which also has a clearly identified market/industry need. This module forms the first part of your major research project and will equip you with knowledge of research methods and statistical analysis techniques that you will then apply in the undertaking of the project.}
+\def\introduction{You are required to deliver a major research project as part of your degree; either in the form of empirical research relating to computing for games, or practice-based research related to game development. Individually, you explore a field that interests you, and for which there is a clearly identified need. This module forms the first part of this project and provides the opportunity to conduct a literature review, as well as to collect and analyse data using appropriate methods and statistics.}
 
 \def\moduleAims{
-	{Consolidate understanding of generating innovative computing solutions at a professional level through a major project.},
-	{Consolidate knowledge and experience of how to organise and execute a computing project over a longer period.},
-	{Build on experience of methods used to identify a problem that requires a solution and work iteratively towards that solution.}}
+	{Develop a research question and analyse methods of research appropriate to that question.},
+	{Consolidate knowledge and experience of how to organise and execute a non-trivial computing project.},
+	{Professional apply research methods in computing.}}
 	
 \def\moduleLearningOutcomes{1,2,3,4,6}
 	
