--- a/comp330/data.tex
+++ b/comp330/data.tex
@@ -9,9 +9,9 @@
 \def\introduction{This module allows you consolidate your multi-disciplinary collaborative game development experience to work on a substantial development project over the course of two study blocks. You will develop your knowledge of computing for games in a practical way using techniques and methods that help you to take a creative approach to building an innovative and marketable game.}
 
 \def\moduleAims{
-	{Consolidate your knowledge and experience in the context of creating a professional, innovative computing solution in a collaborative context.},
-	{Consolidate knowledge and experience of how to independently organise and execute a computing project over a longer period and in a collaborative context.},
-	{Demonstrate independence in identifying a problem that requires a solution and work iteratively and collaboratively towards that solution.}}
+	{Consolidate your knowledge and experience of creating marketable games in a collaborative context.},
+	{Apply knowledge and experience of computing for games as one part of a larger project.},
+	{Demonstrate independence in identifying a non-trivial computing problem and working iteratively and collaboratively towards a computing solution.}}
 	
 \def\moduleLearningOutcomes{1,2,3,4,5,6}
 	
