--- a/comp110/data.tex
+++ b/comp110/data.tex
@@ -6,7 +6,7 @@
 \def\moduleLeader{Dr Edward Powley}
 \def\academicStaff{Dr Michael Scott (Moderator)}
 
-\def\introduction{This module is designed to introduce you to the basic principles of computing in the context of digital games. It is designed to complement the other modules, providing a broad foundation on the theories, methods, models, and techniques in computing which will help you to construct computer programs and be able to make use of relevant scholarly sources.}
+\def\introduction{This module introduces you to the basic principles of computing in the context of digital games. It is designed to complement the other modules, providing a broad foundation on the theories, methods, models, and techniques in computing which will help you to construct computer programs and be able to make use of relevant scholarly sources.}
 
 \def\moduleAims{
 	{Understand the basic principles, terminology, roles, and software development concept that computing professionals apply within a game development context},
