Porting more content to handbook.

--- a/build.tex
+++ b/build.tex
@@ -165,43 +165,7 @@ Co-creator of \textit{MUD1}
 %\clearpage
 \mainmatter
 
-\chapter{Orientation}
-\newpage
-
-\section{Welcome to Falmouth}
-
-First and foremost, a very warm welcome to Falmouth from the \textit{BSc(Hons) Computing for Games} team. We will endeavour to make your time at Falmouth University productive, fun and invigorating. Please don't hesitate to talk to us if you have any questions or issues about your learning experience. \\
-
-Computing technology has changed our lives; not only in the ways we work and communicate, but also the ways in which we play games. This degree will help you to build the skills you need to create and manipulate the computational technologies that will shape the games of the future. \\
-
-The creative industries are booming in the UK. With games reaching across a multitude of platforms and attracting new markets there are now a range of employment opportunities, with plenty of room for independent start-ups. Learning how to use and manage computers and information technology creatively and skilfully will, then, equip you highly-demanded knowledge, skills, and experience; both, within the games industry and further afield. You will learn to apply computing techniques to solve a variety of problems, using a range of programming languages and technologies. You will also learn to take an agile approach to devising computing solutions to game development challenges. Combining elements of creative computing with software engineering, the course leverages the principles of computer science and applies them to the specific challenges and opportunities that digital games present. Along with our emphasis on creativity and enterprise, this ensures that you're able to innovate, develop your own intellectual property and take it to market. With technical competencies in the areas of programming and software development, you'll be able to collaborate with art-based students to develop novel and appealing entertainment software. \\
-
-\section{Meet the Team}
-
-\subsection{Dr Michael Scott, Course Coordinator}
-
-Michael leverages the skills and experience he developed reading Computer Science and Digital Games Theory to investigate game procedurality, accessible game interfaces, and game-inspired educational approaches. He is particularly interested in how lusory perspectives can be applied to teaching computer programming, having completed a PhD in this area. Alongside his teaching role on the Computing for Games programme, he can often be found experimenting with multimedia-based instructional technology.\\
-
-Michael was previously an indie developer, working with Emotional Robots during the development of iOS FPS title Warm Gun, before embarking on series of international research projects. His research has been published in ACM Multimedia, IEEE Transactions on Education, Computer Standards \& Interfaces, as well as the New Review of Hypermedia \& Multimedia.\\
-
-\subsection{Dr Edward Powley, Senior Lecturer}
-
-Joining the teaching team alongside his role as a Research Fellow in Computational Creativity at Falmouth's Academy of Innovation and Research, Ed will be lending his considerable technical knowledge and specialist expertise to the course. His areas of interest include procedural content generation, artificial intelligence, and programming. \\
-
-Ed's research has been published across a range of peer-reviewed academic publications including Artificial Intelligence, the IEEE Transactions on Computational Intelligence and AI in Games, and the AAAI Conference of Artificial Intelligence and Interactive Digital Entertainment. \\
-
-\subsection{Brian McDonald, Senior Lecturer}
-
-Joining the teaching team alongside his role as a Research Fellow in Computational Creativity at Falmouth's Academy of Innovation and Research, Ed will be lending his considerable technical knowledge and specialist expertise to the course. His areas of interest include procedural content generation, artificial intelligence, and programming. \\
-
-Ed's research has been published across a range of peer-reviewed academic publications including Artificial Intelligence, the IEEE Transactions on Computational Intelligence and AI in Games, and the AAAI Conference of Artificial Intelligence and Interactive Digital Entertainment. \\
-
-\subsection{Alcwyn Parker, Lecturer}
-
-Joining the teaching team alongside his role as a Research Fellow in Computational Creativity at Falmouth's Academy of Innovation and Research, Ed will be lending his considerable technical knowledge and specialist expertise to the course. His areas of interest include procedural content generation, artificial intelligence, and programming. \\
-
-Ed's research has been published across a range of peer-reviewed academic publications including Artificial Intelligence, the IEEE Transactions on Computational Intelligence and AI in Games, and the AAAI Conference of Artificial Intelligence and Interactive Digital Entertainment. \\
-
+\input{handbook_content}
 
 \chapter{Study Block I}
 \newpage
