--- a/handbook_content.tex
+++ b/handbook_content.tex
@@ -5,9 +5,7 @@
 
 First and foremost, a very warm welcome to Falmouth from the \textit{BSc(Hons) Computing for Games} team. We will endeavour to make your time at Falmouth University productive, fun and invigorating. Please don't hesitate to talk to us if you have any questions or issues about your learning experience. \\
 
-Computing technology has changed our lives; not only in the ways we work and communicate, but also the ways in which we play games. This degree will help you to build the skills you need to create and manipulate the computational technologies that will shape the games of the future. \\
-
-The creative industries are booming in the UK. With games reaching across a multitude of platforms and attracting new markets there are now a range of employment opportunities, with plenty of room for independent start-ups. Learning how to use and manage computers and information technology creatively and skilfully will, then, equip you highly-demanded knowledge, skills, and experience; both, within the games industry and further afield. You will learn to apply computing techniques to solve a variety of problems, using a range of programming languages and technologies. You will also learn to take an agile approach to devising computing solutions to game development challenges. Combining elements of creative computing with software engineering, the course leverages the principles of computer science and applies them to the specific challenges and opportunities that digital games present. Along with our emphasis on creativity and enterprise, this ensures that you're able to innovate, develop your own intellectual property and take it to market. With technical competencies in the areas of programming and software development, you'll be able to collaborate with art-based students to develop novel and appealing entertainment software. \\
+All of your tutors are active professional practitioners and researchers and their teaching is enriched and influenced by their own work. Your tutors engage in professional creative practice and research across a diverse range of forms and areas of interest, which is generously revealed in teaching sessions, lectures, workshops and performances.
 
 \section{Meet the Team}
 
@@ -83,6 +81,62 @@ A timetable showing games staff’ office hours will be posted on the Learning S
 Please note, that periodically the teaching team will want to contact you. This will be done using your official Falmouth email account, so please check this regularly. \\
 
 Also note that you may want to engage with fellow staff and students through the FaceBook Group and the IRC tool.\\
+
+\chapter{Course}
+\newpage
+
+\section{Aims \& Key Features}
+
+Computing technology has changed our lives; not only in the ways we work and communicate, but also the ways in which we play games. This degree will help you to build the skills you need to create and manipulate the computational technologies that will shape the games of the future. \\
+
+The creative industries are booming in the UK. With games reaching across a multitude of platforms and attracting new markets there are now a range of employment opportunities, with plenty of room for independent start-ups. Learning how to use and manage computers and information technology creatively and skilfully will, then, equip you highly-demanded knowledge, skills, and experience; both, within the games industry and further afield. You will learn to apply computing techniques to solve a variety of problems, using a range of programming languages and technologies. You will also learn to take an agile approach to devising computing solutions to game development challenges. Combining elements of creative computing with software engineering, the course leverages the principles of computer science and applies them to the specific challenges and opportunities that digital games present. Along with our emphasis on creativity and enterprise, this ensures that you're able to innovate, develop your own intellectual property and take it to market. With technical competencies in the areas of programming and software development, you'll be able to collaborate with art-based students to develop novel and appealing entertainment software. \\
+
+BSc (Hons) Computing for Games covers a range of topics designed to help you to build the technical skills you need to excel in the digital games industry, or in related fields such as software development. Our research expertise positions the course at the cutting-edge of the industry, while our focus on game and app development distinguishes us from generic computer science degrees. You will learn and practice skills in programming, including Python, C\#, and C++, required in different aspects of coding and computing in game development.\\
+
+The course is comprised of modules in a variety of areas important to the future of gaming such as artificial intelligence and augmented and virtual reality. You'll gain hands-on experience of using Agile iterative development methods through practical application during the course. You'll hone your technical and project management skills by engaging with game and software development practices using methods drawn direct from the industry. You'll practice and develop your skills and knowledge while working on both individual and collaborative projects. Business and enterprise support is also provided to help build your professional development.\\
+
+Taught through seminars, workshops and tutorials, you'll often work individually and in small groups in a way that mirrors how professionals work across game studios, the indie game scene, as independent contractors/consultants, and as members of the open-source community. \\
+
+By choosing to study for a degree in Digital Games at Falmouth you will:\\
+
+- Be taught by a staff of highly experienced professionals and academics;
+- Develop creative and technical skills to help you become a highly skilled practitioner, who can excel in a professional collaborative development studio environment;
+- Be based at the stunning Tremough Campus, which houses industry-standard facilities;
+- Have the opportunity to work collaboratively across disciplinary boundaries, helping you to gain important experience in team-based game development preparing you for a career in the industry;
+- Benefit from a schedule of visiting industry practitioners who'll bring a diverse range of current industry experience to the course.
+
+The BSc (Hons) Computing for Games programme aims to: 
+
+- Develop specialist practitioners with the skills and knowledge needed to become creative and enterprising software developers. 
+- Develop an understanding of game industry context and drivers, alongside understanding of the software development context. 
+- Enable the application of management and production skills 
+
+\section{Learning Outcomes}
+
+L.O. 1. Technical Development Practice: generate creative computing solutions using professional techniques.
+L.O. 2. Communication: communicate effectively with stakeholders in writing, verbally and through adherence to coding standards.
+L.O. 3. Critical Evaluation: Reflect critically on, and evaluate, working methods and solutions.
+L.O. 4. Research: Conduct research, present knowledge in an academic format and apply that research to practice.
+L.O. 5. Enterprise \& Innovation: Approach computing problems creatively to develop innovate solutions and to provide opportunities for Enterprise.
+L.O. 6 Professionalism: Set goals, manage workloads to meet deadlines, work efficiently, effectively in teams, and accommodate change.
+
+\section{Structure}
+
+The learning and teaching structure deployed within the award seek to reflect the rationale, aims and learning outcomes of the award and to engage the active participation of a committed group of academic staff and students.  Underlying the range of strategies is the objective of encouraging the development of the critical practitioner and enabling the production of a mature body of work. 
+
+The key feature of these strategies is to encourage the development of professional, creative and critically aware practice.  
+
+The modules of study provide the framework within which independent creative learning is initiated, developed and enhanced into professional game development practice. The award is predicated on the premise that intellectual interrogation of personal practice within broad contextual considerations enhances creative ability.
+
+You are prepared for the specific practices of assessment (essay-writing, report-writing, research journal, portfolio production, etc) through introductory explanatory sessions incorporated into the relevant modules. These study skills may be further enhanced through the use of Academic Support and the tutorial process. 
+
+The award is predicated on appreciation of the importance of the understanding and integration of the historic and theoretical contexts which inform practical work. It is anticipated that knowledge of history and theory will be demonstrated in a range of ways – including presentations, group work and working with images and ideas. The course team believes that making theory accessible and interesting to students through demonstrating its usefulness in interpreting animation and conceptualising ideas. 
+
+This approach will be used in conjunction with more reflective written pieces of work, enabling you to interrogate material, research ideas and develop arguments in a thorough and sustained manner - work which will be supported with study skills workshops in research methods, giving presentations and essay writing.
+
+\section{Timetable}
+
+Each student will receive a personalised timetable. This timetable will be made available via the MyTimetable website at mytimetable.falmouth.ac.uk, and the Stage 1 induction process at the start of each academic year.
 
 \chapter{Studio Practice}
 \newpage
