Fixed bug in template, re-compiled module guide slides.

--- a/build.tex
+++ b/build.tex
@@ -86,6 +86,9 @@
 
 \newlength{\drop}% for my convenience
 
+%table coloum centering
+\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
+
 %%% BEGIN DOCUMENT
 
 \begin{document}
