--- a/comp310/data.tex
+++ b/comp310/data.tex
@@ -36,4 +36,4 @@
 	{Self-Directed Study, 24 hours},
 	{Self-Directed Studio Practice, 40 hours}}
 	
-\def\learningSpaceID{???}
+\def\learningSpaceID{1506}
