--- a/comp320/data.tex
+++ b/comp320/data.tex
@@ -37,4 +37,4 @@
 	{Self-Directed Study, 40 hours},
 	{Self-Directed Studio Practice, 40 hours}}
 	
-\def\learningSpaceID{???}
+\def\learningSpaceID{1507}
