--- a/comp330/data.tex
+++ b/comp330/data.tex
@@ -40,4 +40,4 @@
 	{Self-Directed Study, 12 hours},
 	{Self-Directed Studio Practice, 40 hours}}
 	
-\def\learningSpaceID{???}
+\def\learningSpaceID{1508}
