--- a/comp350/data.tex
+++ b/comp350/data.tex
@@ -38,4 +38,4 @@
 	{Self-Directed Study, 24 hours},
 	{Self-Directed Studio Practice, 40 hours}}
 	
-\def\learningSpaceID{???}
+\def\learningSpaceID{1510}
