Verified data for COMP260 and rebuilt.

--- a/comp260/data.tex
+++ b/comp260/data.tex
@@ -3,7 +3,7 @@
 \def\credits{20}
 \def\isCompulsory{Compulsory}
 
-\def\moduleLeader{Brian McDonald}
+\def\moduleLeader{Gareth White}
 \def\academicStaff{Dr Michael Scott (Moderator)}
 
 \def\introduction{This module will help you to gain a deeper understanding of distributed systems, computer networking, and database technology. You will learn about the use of these technologies in the context of games and further game practical experience of applying that learning to a collaborative development of a multi-player game.}
@@ -24,16 +24,17 @@
 	{Show an understanding of how to plan and manage time. Meet deadlines by planning available time effectively.}}
 
 \def\assignments{
-	{Worksheet Tasks, 80\%},
-	{Research Journal, 20\%}}
+	{Distributed Processing Task, 30\%},
+	{Client-Server Programming Task, 60\%},
+	{Research Journal (Cybersecurity), 10\%}}
 
 \def\hours{
 	{Sessions, 36 hours},
 	{Directed Reading, 18 hours},
 	{Distributed Processing Task, 22 hours},
 	{Client-Server Game Task, 34 hours},
-	{Integration into Collaborative Game, 20 hours},
-	{Research Journal, 12 hours},
+	{Cross-Over with Collaborative Game, 20 hours},
+	{Cybersecurity Journal, 12 hours},
 	{Self-Directed Study, 18 hours},
 	{Self-Directed Studio Practice, 40 hours}}
 	
