Revised module leader for COMP260.

--- a/comp260/data.tex
+++ b/comp260/data.tex
@@ -3,7 +3,7 @@
 \def\credits{20}
 \def\isCompulsory{Compulsory}
 
-\def\moduleLeader{Gareth White}
+\def\moduleLeader{Gareth Lewis}
 \def\academicStaff{Dr Michael Scott (Moderator)}
 
 \def\introduction{This module will help you to gain a deeper understanding of distributed systems, computer networking, and database technology. You will learn about the use of these technologies in the context of games and further game practical experience of applying that learning to a collaborative development of a multi-player game.}
