Changed academicYear to 2018-19 Modified build.py for Python 3 compatibility

--- a/build.tex
+++ b/build.tex
@@ -35,7 +35,7 @@
 
 \author{Falmouth University Games Academy}
 \title{BSc(Hons) Computing for Games}
-\date{2017-18}
+\date{\academicYear}
 
 %\renewcommand{\chaptername}{Section}
 %\renewcommand\cftchapteraftersnumb{\normalfont}
@@ -78,7 +78,7 @@
 {\vspace{1cm}
 \huge BSc(Hons) Computing for Games}\\[\baselineskip]
 {\Huge Student Handbook}\\[\baselineskip]
-{\large 2017-18}\\[0.5\drop]
+{\large \academicYear}\\[0.5\drop]
 \vfill
 {\includegraphics[height=4em]{GamesLogoAt}	
 \includegraphics[height=2em]{FalmouthLogo}}\\[0.5\baselineskip]
@@ -107,7 +107,7 @@
 \begin{flushleft}
 \textit{BSc(Hons) Computing for Games --- Student Handbook}
 
-\copyright  2017 Falmouth University. All rights reserved.
+\copyright  2017--\the\year\ Falmouth University. All rights reserved.
 
 \bigskip
 
