Updated LearningSpace links

--- a/handbook_template.tex
+++ b/handbook_template.tex
@@ -92,7 +92,7 @@
 	\MakeLowercase{\protect\url{http://resourcelists.falmouth.ac.uk/modules/\moduleCode}}
 
 	\subsection{Learning Space}
-	\MakeLowercase{\protect\url{http://learningspace.falmouth.ac.uk/course/view.php?id=\learningSpaceID}}
+	\MakeLowercase{\protect\url{https://learningspace.falmouth.ac.uk/course/view.php?id=\learningSpaceID}}
 	
 	\newpage
 		
