--- a/slide_template.tex
+++ b/slide_template.tex
@@ -126,7 +126,7 @@
 	\frametitle{Additional Resources}
 	
 	Session Plans \& Materials: \\
-	\url{http://learningspace.falmouth.ac.uk/course/view.php?id=\learningSpaceID}
+	\url{https://learningspace.falmouth.ac.uk/course/view.php?id=\learningSpaceID}
 	
 	\vspace{1.5em}	
 	
